[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["nagalakshmi"]

[tool.poetry.dependencies]
python = "3.11.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
